[package]
name = "marvu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mvu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "7.0"
futures = "0.3"
percent-encoding = "2.3"
zip = "2.2"
